--- a/src/index.css
+++ b/src/index.css
@@ -6,50 +6,57 @@
 
 header {
   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 header h1 {
   font-size: 2.5rem;
 }
 
-header p{
+header p {
   font-family: sans-serif;
   font-size: 1.25rem;
 }
+
+button {
+  margin: 0.5rem;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
 .bars-container {
-display: flex;
-    justify-content: space-around;
-    padding: 2rem 1rem;
-    border-bottom: 2px solid rebeccapurple;
-    gap: 2rem;
+  display: flex;
+  justify-content: space-around;
+  padding: 2rem 1rem;
+  border-bottom: 2px solid rebeccapurple;
+  gap: 2rem;
 }
 .container {
   display: flex;
-    flex-direction: column;
-    align-items: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-/* BIER */
+/* BIER pure css */
 .bier-container {
-border: 5px solid rgba(209, 243, 250, 1);
-    border-top: none;
-    position: relative;
-    z-index: 1;
-    width: 12rem;
-    height: 18rem;
-    border-radius: 0% 0% 4% 4% / 0% 0% 4% 4%;
-    background-color: rgba(209, 243, 250, 0.3);
-    margin-bottom: 1rem;
-    box-shadow: 0px -13px 4px 11px rgba(209, 243, 250, 1) inset;
+  border: 5px solid rgba(209, 243, 250, 1);
+  border-top: none;
+  position: relative;
+  z-index: 1;
+  width: 12rem;
+  height: 18rem;
+  border-radius: 0% 0% 4% 4% / 0% 0% 4% 4%;
+  background-color: rgba(209, 243, 250, 0.3);
+  margin-bottom: 1rem;
+  box-shadow: 0px -13px 4px 11px rgba(209, 243, 250, 1) inset;
 }
-
 
 /* HANDLE */
 .bier-container::after {
-  content: "";
+  content: '';
   position: absolute;
   height: 50%;
   width: 44%;
@@ -58,7 +65,7 @@ border: 5px solid rgba(209, 243, 250, 1);
   display: block;
   z-index: 0;
   border-radius: 0% 40% 40% 0%/ 0% 40% 40% 0%;
-  box-shadow:  inset -21px 0px 0px 21px rgba(209, 243, 250, 1);
+  box-shadow: inset -21px 0px 0px 21px rgba(209, 243, 250, 1);
 }
 
 .bier-progress-bar {
@@ -83,9 +90,51 @@ border: 5px solid rgba(209, 243, 250, 1);
   background-color: rgb(255, 216, 108);
 }
 
-button {
-  margin: 0.5rem;
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  cursor: pointer;
+/* BIER WITH PNG IMAGE  */
+
+.bier-png-container {
+  position: relative;
+  width: 18rem;
+  aspect-ratio: 563 / 640;
 }
+
+.bier-png-container .bierstein {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.bier-png-container .bierstein-color {
+  background: rgba(155, 206, 248, 0.3);
+  position: absolute;
+  height: 100%;
+  left: 3px;
+  width: 64%;
+  border-radius: 13% 33% 44% 43% / 13% 7% 10% 10%;
+}
+.bier-png-container .bierstein img {
+  width: 100%;
+  height: 100%;
+}
+
+.bier-png-container .bier-progress-bar {
+  position: absolute;
+  width: 56%;
+  height: 68%;
+  left: 6%;
+  top: 4%;
+    border-radius: 6% 7% 43% 36% / 5% 3% 10% 10% ;
+  overflow: hidden;
+}
+
+.bier-png-container .bier-png-progress-fill {
+  position: absolute;
+  bottom: 0;
+  transition: height 0.1s linear;
+  border-radius: 3% 3% 40% 40% / 3% 3% 10% 10% ;
+  background-color: rgb(255, 216, 108);
+  height: 100%;
+  width: 100%;
+  transition: height 0.1s linear;
+}
+
